tests/snapshots/render__corpus_README_md_120x40.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga README.md                                                                                                   1/22
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││# Fixture Vault                                                                       │
│31 entries                    ││                                                                                      │
│▸ .github                     ││A corpus for perga's tests. Every Markdown feature perga renders appears somewhere    │
│▸ docs                        ││below or in one of the linked documents.                                              │
│▸ spaces and #hash            ││                                                                                      │
│  anchors.md                  ││See the API docs and the setup guide.                                                 │
│  broken-links.md             ││                                                                                      │
│  crlf.md                     ││## Inline formatting                                                                  │
│  cycle-a.md                  ││                                                                                      │
│  cycle-b.md                  ││Text can be emphasised, strong, struck through, and inline code. An autolink:         │
│  empty.md                    ││https://example.com. A footnote reference[^note].                                     │
│  frontmatter-only.md         ││                                                                                      │
│  gfm.md                      ││[note]: The footnote definition.                                                      │
│  invalid-utf8.md             ││                                                                                      │
│  no-trailing-newline.md      ││## An image                                                                           │
│  outside.md                  ││                                                                                      │
│● README.md                   ││[image: a diagram of the pipeline]                                                    │
│  unicode.md                  ││                                                                                      │
│  wide.md                     ││## Raw HTML                                                                           │
│  wiki.md                     ││                                                                                      │
│                              ││<div class="callout">Raw HTML renders as literal text.</div>                          │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
