tests/snapshots/render__corpus_README_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga README.md                   1/27
┌──────────────────┐───────────────────█
│FILES search      │                   █
│outline links     │                   ║
│31 entries        │s tests. Every     ║
│  outside.md      │rga renders appears║
│● README.md       │ in one of the     ║
│  unicode.md      │                   ║
└──────────────────┘───────────────────║
 READ
