tests/snapshots/render__corpus_README_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga README.md                                                           1/26
┌──────────────────────────────┐┌──────────────────────────────────────────────█
│FILES search outline links    ││# Fixture Vault                               █
│26 entries                    ││                                              █
│▸ .github                     ││A corpus for perga's tests. Every Markdown    █
│▸ docs                        ││feature perga renders appears somewhere below █
│▸ spaces and #hash            ││or in one of the linked documents.            █
│  broken-links.md             ││                                              █
│  crlf.md                     ││See the API docs and the setup guide.         █
│  empty.md                    ││                                              █
│  frontmatter-only.md         ││## Inline formatting                          █
│  gfm.md                      ││                                              █
│  invalid-utf8.md             ││Text can be emphasised, strong, struck through█
│  no-trailing-newline.md      ││, and inline code. An autolink:               █
│● README.md                   ││https://example.com. A footnote reference[^   █
│  unicode.md                  ││note].                                        █
│  wide.md                     ││                                              █
│                              ││[note]: The footnote definition.              █
│                              ││                                              █
│                              ││## An image                                   ║
│                              ││                                              ║
│                              ││[image: a diagram of the pipeline]            ║
└──────────────────────────────┘└──────────────────────────────────────────────║
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find
