tests/snapshots/render__corpus_broken-links_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga broken-links.md              1/4
┌──────────────────┐───────────────────┐
│FILES search      │                   │
│outline links     │                   │
│31 entries        │a [[Missing Page]].│
│  anchors.md      │                   │
│● broken-links.md │                   │
│  crlf.md         │                   │
└──────────────────┘───────────────────┘
 READ
