tests/snapshots/render__corpus_broken-links_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga broken-links.md                                                      1/4
┌──────────────────────────────┐┌──────────────────────────────────────────────┐
│FILES search outline links    ││# Broken links                                │
│30 entries                    ││                                              │
│▸ .github                     ││a missing file and a [[Missing Page]].        │
│▸ docs                        ││                                              │
│▸ spaces and #hash            ││                                              │
│  anchors.md                  ││                                              │
│● broken-links.md             ││                                              │
│  crlf.md                     ││                                              │
│  cycle-a.md                  ││                                              │
│  cycle-b.md                  ││                                              │
│  empty.md                    ││                                              │
│  frontmatter-only.md         ││                                              │
│  gfm.md                      ││                                              │
│  invalid-utf8.md             ││                                              │
│  no-trailing-newline.md      ││                                              │
│  outside.md                  ││                                              │
│  README.md                   ││                                              │
│  unicode.md                  ││                                              │
│  wide.md                     ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find
