tests/snapshots/render__corpus_docs_api_auth_md_120x40.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga docs/api/auth.md                                                                                            1/12
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││# Authentication                                                                      │
│26 entries                    ││                                                                                      │
│▸ .github                     ││This service uses Bearer tokens. See setup for the full walkthrough, and [[Token      │
│▾ docs                        ││Rotation]] for the rotation policy.                                                   │
│  ▾ api                       ││                                                                                      │
│      ambiguous.md            ││## Obtaining a token                                                                  │
│    ● auth.md                 ││                                                                                      │
│      errors.md               ││curl -X POST /auth/token \                                                            │
│      webhooks.md             ││  -d '{"key":"..."}'                                                                  │
│  ▸ guides                    ││                                                                                      │
│▸ spaces and #hash            ││Back to the index.                                                                    │
│  broken-links.md             ││                                                                                      │
│  crlf.md                     ││                                                                                      │
│  empty.md                    ││                                                                                      │
│  frontmatter-only.md         ││                                                                                      │
│  gfm.md                      ││                                                                                      │
│  invalid-utf8.md             ││                                                                                      │
│  no-trailing-newline.md      ││                                                                                      │
│  README.md                   ││                                                                                      │
│  unicode.md                  ││                                                                                      │
│  wide.md                     ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
