tests/snapshots/render__corpus_docs_api_auth_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga docs/api/auth.md            1/14
┌──────────────────┐───────────────────█
│FILES search      │                   █
│outline links     │                   █
│30 entries        │earer tokens. See  █
│      ambiguous.md│walkthrough, and [[║
│    ● auth.md     │r the rotation     ║
│      errors.md   │                   ║
└──────────────────┘───────────────────║
 READ
