tests/snapshots/render__corpus_docs_api_auth_md_80x24.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga docs/api/auth.md                                                    1/13
┌──────────────────────────────┐┌──────────────────────────────────────────────┐
│FILES search outline links    ││# Authentication                              │
│30 entries                    ││                                              │
│▸ .github                     ││This service uses Bearer tokens. See setup    │
│▾ docs                        ││for the full walkthrough, and [[Token Rotation│
│  ▾ api                       ││]] for the rotation policy.                   │
│      ambiguous.md            ││                                              │
│    ● auth.md                 ││## Obtaining a token                          │
│      errors.md               ││                                              │
│      webhooks.md             ││curl -X POST /auth/token \                    │
│  ▸ guides                    ││  -d '{"key":"..."}'                          │
│▸ spaces and #hash            ││                                              │
│  anchors.md                  ││Back to the index.                            │
│  broken-links.md             ││                                              │
│  crlf.md                     ││                                              │
│  cycle-a.md                  ││                                              │
│  cycle-b.md                  ││                                              │
│  empty.md                    ││                                              │
│  frontmatter-only.md         ││                                              │
│  gfm.md                      ││                                              │
│  invalid-utf8.md             ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find
