tests/snapshots/render__corpus_gfm_md_120x40.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga gfm.md                                                                                                      1/43
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────█
│FILES search outline links    ││# GFM features                                                                        █
│30 entries                    ││                                                                                      █
│▸ .github                     ││## A table with mixed alignment                                                       █
│▸ docs                        ││                                                                                      █
│▸ spaces and #hash            ││┌─────────────┬────────┬───────┐                                                      █
│  anchors.md                  │││ Left        │ Centre │ Right │                                                      █
│  broken-links.md             ││├─────────────┼────────┼───────┤                                                      █
│  crlf.md                     │││ a           │   b    │     c │                                                      █
│  cycle-a.md                  │││ longer cell │   x    │ 12345 │                                                      █
│  cycle-b.md                  ││└─────────────┴────────┴───────┘                                                      █
│  empty.md                    ││                                                                                      █
│  frontmatter-only.md         ││## A task list                                                                        █
│● gfm.md                      ││                                                                                      █
│  invalid-utf8.md             ││- ☑ a finished task                                                                   █
│  no-trailing-newline.md      ││- ☐ an unfinished task                                                                █
│  outside.md                  ││                                                                                      █
│  README.md                   ││## Deeply nested lists                                                                █
│  unicode.md                  ││                                                                                      █
│  wide.md                     ││- one                                                                                 █
│                              ││    - two                                                                             █
│                              ││        - three                                                                       █
│                              ││            - four                                                                    █
│                              ││                - five                                                                █
│                              ││                                                                                      █
│                              ││## A blockquote containing a list                                                     █
│                              ││                                                                                      █
│                              ││> Quoted text.                                                                        █
│                              ││>                                                                                     █
│                              ││> - first                                                                             █
│                              ││> - second                                                                            █
│                              ││>                                                                                     █
│                              ││> More quoted text.                                                                   █
│                              ││                                                                                      ║
│                              ││## Code blocks                                                                        ║
│                              ││                                                                                      ║
│                              ││fn main() {                                                                           ║
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────║
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
