tests/snapshots/render__corpus_gfm_md_40x10.snap
---
source: tests/render.rs
expression: "frame(&mut app, width, height)"
---
 perga gfm.md                      1/43
┌──────────────────┐───────────────────█
│FILES search      │                   ║
│outline links     │                   ║
│31 entries        │ed alignment       ║
│  frontmatter-only│                   ║
│● gfm.md          │────┬───────┐      ║
│  invalid-utf8.md │tre │ Right │      ║
└──────────────────┘───────────────────║
 READ
